# scryfall-rss

./: .gitignore  README.md  pyproject.toml  scryfall_feed.xml  scryfall_rss.py
.github/workflows/: scryfall_rss.yml
